Completed gameboard component

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,12 @@
   margin: 0;
 }
 
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 header {
   background-color: darkgray;
   height: 80px;
@@ -10,4 +16,5 @@ header {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  width: 100%;
 }
